<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChessApp</string>
    <string name="title">Chess</string>
    <string name="play">New Game</string>
    <string name="playback">Playback\nRecorded Games</string>
    <string name="title_activity_chess_game">ChessGame</string>
    <string name="title_activity_recorded_games">RecordedGames</string>
    <string name="undo">Undo</string>
    <string name="ai">AI</string>
    <string name="draw">Draw</string>
    <string name="resign">Resign</string>
    <string name="sortByDate">Sort by Date</string>
    <string name="sortByTitle">Sort by Title</string>
    <string name="selectGame">(select a game)</string>
    <string name="recordsHeader">Title - Date</string>
    <string name="replay">Replay Match</string>
    <string name="chessPiece">Chess Piece</string>

</resources>
