<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/background_light"
    tools:context="${relativePackage}.${activityClass}"
    android:weightSum="100" >

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/title"
        android:gravity="center"
        android:textSize="50dp"
        android:textStyle="bold"
        android:layout_weight="40" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="15"
        android:text="@string/play" />

    <Button
        android:id="@+id/playbackButton"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="15"
        android:text="@string/playback" />

</LinearLayout>
