<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context="${relativePackage}.${activityClass}" >

    <GridLayout
	    android:id="@+id/gridLayout"
	    android:columnCount="8"
	    android:rowCount="8"
	    android:layout_weight="76"
	    android:layout_width="match_parent"
	    android:layout_height="0dp" >
 
	</GridLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_weight="12"
        android:layout_height="0dp" >

        <Button
            android:id="@+id/undo"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:text="@string/undo" />

        <Button
            android:id="@+id/ai"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:text="@string/ai" />

        <Button
            android:id="@+id/draw"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:text="@string/draw" />

        <Button
            android:id="@+id/resign"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:text="@string/resign" />

    </LinearLayout>

    <TextView
        android:id="@+id/turn"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:textSize="30dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@android:color/holo_blue_dark" />

</LinearLayout>
